--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,34 @@
 			<optional>true</optional>
 		</dependency>
 
+
+<!--		<dependency>-->
+<!--			<groupId>jstl</groupId>-->
+<!--			<artifactId>jstl</artifactId>-->
+<!--			<version>1.2</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>javax.servlet</groupId>-->
+<!--			<artifactId>jstl</artifactId>-->
+<!--			<version>1.2</version>-->
+<!--		</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp/jakarta.servlet.jsp-api -->
+<!--		<dependency>-->
+<!--			<groupId>jakarta.servlet.jsp</groupId>-->
+<!--			<artifactId>jakarta.servlet.jsp-api</artifactId>-->
+<!--			<version>3.1.1</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+
+
+<!--				<dependency>-->
+<!--			<groupId>taglibs</groupId>-->
+<!--			<artifactId>standard</artifactId>-->
+<!--			<version>1.1.2</version>-->
+<!--		</dependency>-->
+
+
 	</dependencies>
 
 	<build>
